add creation of image
