# pv116.rozetka.com/app/Http/Controllers/Api/ProductController.php
@@ -1,0 +1,72 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Models\Categories;
+use App\Models\Product;
+use Illuminate\Http\Request;
+use Intervention\Image\Drivers\Gd\Driver;
+use Intervention\Image\ImageManager;
+
+class ProductController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     tags={"Product"},
+     *     path="/api/products",
+     *     @OA\Response(response="200", description="List Products.")
+     * )
+     */
+    public function getList()
+    {
+//        $data = Product::all();
+        $data = Product::with('category')->get();
+        return response()->json($data)
+            ->header('Content-Type', 'application/json; charset=utf-8');
+    }
+    /**
+     * @OA\Post(
+     *     tags={"Product"},
+     *     path="/api/products",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 required={"name", "description", "price", "quantity", "category_id"},
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     type="number"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="quantity",
+     *                     type="integer"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="category_id",
+     *                     type="integer"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="201", description="Product created.")
+     * )
+     */
+    public function create(Request $request) {
+        $input = $request->all();
+        $product = Product::create($input);
+
+        return response()->json($product, 201, [
+            'Content-Type' => 'application/json;charset=UTF-8',
+            'Charset' => 'utf-8'
+        ], JSON_UNESCAPED_UNICODE);
+    }
+}
